# esp-ward

./: .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  all.html  attr.entry.html  attr.interrupt.html  build.rs  crates.js  enum.SpiMode.html  index.html  macro.create_joystick.html  macro.init_i2c_custom!.html  macro.init_i2c_default!.html  macro.init_spi_custom!.html  macro.init_spi_default!.html  macro.initialize_chip.html  macro.load_lp_code.html  macro.make_gpio_enum_dispatch_macro!.html  macro.make_gpio_enum_dispatch_macro.html  macro.take_periph!.html  macro.take_system!.html  macro.take_system.html  macro.wait!.html  rustfmt.toml  search-index.js  settings.html  struct.Clocks.html  struct.FullDuplexMode.html  struct.Spi.html  trait.I2cInstance.html  trait.OutputPin.html  trait.SpiInstance.html  trait._embedded_dma_ReadBuffer.html  trait._embedded_dma_ReadTarget.html  trait._embedded_dma_Word.html  trait._embedded_dma_WriteBuffer.html  trait._esp_hal_gpio_InputPin.html  (+7 more)
.cargo/: config.toml
.github/workflows/: ci.yml
compare/: crispy_click.rs  crispy_click_ward.rs  esp_clock.rs  esp_clock_ward.rs  etch_a_sketch.rs  etch_a_sketch_ward.rs  scrolling_text.rs  scrolling_text_ward.rs
connectivity/: constant.HIVE_MQ_PORT.html  constant.WORLDTIMEAPI_IP.html  sidebar-items.js
display/: sidebar-items.js  trait.EGDisplay.html
display/ili9341/: constant.DEFAULT_STYLE_LARGE.html  constant.DEFAULT_STYLE_MID.html  constant.DEFAULT_STYLE_SMALL.html  sidebar-items.js  struct.Ili9341Display.html
display/pcd8544/: index.html  sidebar-items.js
docs/: help.html  search-index.js  settings.html  src-files.js
docs/esp_ward/: all.html  attr.entry.html  attr.handler.html  attr.interrupt.html  attr.main.html  attr.ram.html  enum.SpiMode.html  index.html  macro.create_joystick!.html  macro.create_joystick.html  macro.create_stack!.html  macro.create_stack.html  macro.get_ip.html  macro.get_timer.html  macro.get_x_adc_pin!.html  macro.get_x_adc_pin.html  macro.get_y_adc_pin!.html  macro.get_y_adc_pin.html  macro.init_chip!.html  macro.init_chip.html  macro.init_i2c_custom.html  macro.init_i2c_default.html  macro.init_spi_custom.html  macro.init_spi_default.html  macro.init_wifi!.html  macro.init_wifi.html  macro.initialize_chip.html  macro.load_lp_code.html  macro.make_gpio_enum_dispatch_macro.html  macro.prepare_alloc!.html  macro.prepare_alloc.html  macro.prepare_buffers!.html  macro.prepare_buffers.html  macro.take_periph.html  macro.take_system.html  macro.wait.html  macro.wait_wifi.html  sidebar-items.js  struct.Clocks.html  struct.FullDuplexMode.html  (+63 more)
docs/esp_ward/connectivity/: constant.HIVE_MQ_IP.html  constant.HIVE_MQ_PORT.html  constant.WORLDTIMEAPI_IP.html  fn.create_socket.html  fn.find_unixtime.html  fn.get_responce.html  fn.get_time.html  fn.get_timestamp.html  fn.ip_string_to_parts.html  fn.mqtt_connect_custom.html  fn.mqtt_connect_default.html  fn.mqtt_receive.html  fn.mqtt_send.html  fn.mqtt_subscribe.html  fn.receive_message.html  fn.send_request.html  fn.timestamp_to_hms.html  fn.weekday_from_timestamp.html  index.html  macro.create_stack.html  macro.get_ip!.html  macro.get_ip.html  macro.get_timer!.html  macro.get_timer.html  macro.init_wifi.html  macro.prepare_buffers.html  macro.wait_wifi.html  sidebar-items.js
docs/esp_ward/display/: enum.DisplaySegment.html  index.html  sidebar-items.js  trait.Display.html  trait.EGDisplay.html
docs/esp_ward/nb/: enum.Error.html  index.html  macro.block.html  type.Result.html
docs/esp_ward/peripherals/: enum.PeripheralError.html  index.html  sidebar-items.js  trait.CO2Sensor.html  trait.DistanceSensor.html  trait.HumiditySensor.html  trait.I2cPeriph.html  trait.LumiSensor.html  trait.PressureSensor.html  trait.Readable.html  trait.Shutdown.html  trait.SpiPeriph.html  trait.TemperatureSensor.html  trait.UnifiedData.html  trait.VOCSensor.html  trait.Writable.html
docs/src/esp_ward/: connectivity.rs.html  (+1 more)
esp_ward/: attr.ram.html  macro.init_spi_custom.html  macro.initialize_chip!.html  macro.load_lp_code!.html  macro.take_periph.html  macro.wait.html  sidebar-items.js  struct.I2C.html  struct.IO.html  trait.InputPin.html  trait._embedded_dma_WriteTarget.html  trait._esp_hal_dma_DmaTransferRxTx.html  trait._esp_hal_gpio_OutputPin.html  trait._esp_hal_gpio_Pin.html  trait._esp_hal_timer_TimerGroupInstance.html  trait._esp_hal_uart_Instance.html
esp_ward/connectivity/: constant.HIVE_MQ_IP.html  index.html
esp_ward/display/: index.html  trait.Display.html
esp_ward/nb/: macro.block.html
esp_ward/peripherals/: index.html  trait.CO2Sensor.html  trait.Readable.html  trait.Shutdown.html  trait.TemperatureSensor.html
examples/: display_button.rs  display_data.rs  distance_sensor.rs  etch_a_sketch.rs  led_scrolling.rs  motion_detect.rs  mqtt_client.rs  send_request.rs  sensor_i2c.rs
nb/: enum.Error.html  index.html  type.Result.html
peripherals/: enum.PeripheralError.html  sidebar-items.js  trait.DistanceSensor.html  trait.I2cPeriph.html  trait.SpiPeriph.html  trait.VOCSensor.html
peripherals/aht20/: index.html
peripherals/bme280/: enum.Bme280Interface.html  struct.Bme280Sensor.html
peripherals/button/: enum.Event.html  sidebar-items.js  struct.Button.html
peripherals/joystick/: constant.ROUGH_THRESHOLD.html  index.html  macro.create_joystick.html  sidebar-items.js
peripherals/pir/: sidebar-items.js
peripherals/sgp30/: index.html  struct.Sgp30Sensor.html
peripherals/tsl2591/: index.html  sidebar-items.js
peripherals/ultrasonic_distance/: index.html  sidebar-items.js
resources/: build_docs.sh  index.html
src/: connectivity.rs  dev_attr.rs  lib.rs  main.rs  peripheral_common.rs  tiny_mqtt.rs
src/connectivity/: mod.rs  mqtt.rs  tiny_mqtt.rs  wifi.rs
src/connectivity_prototype/: mod.rs  mqtt.rs  tiny_mqtt.rs  wifi.rs
src/display/: ili9341.rs  max7219.rs  mod.rs  pcd8544.rs
src/esp_ward/: connectivity.rs.html  lib.rs.html
src/peripherals/: aht20.rs  bme280.rs  button.rs  display.rs  joystick.rs  mod.rs  pcd8544.rs  pir.rs  sgp30.rs  tsl2591.rs  ultrasonic_distance.rs
(+105 files in other folders)
